tests/sources/invalid/classes/type_method_call_arg_type.fire
// Semantic error: 'Type.staticMethod(...)' called with an argument of the
// wrong type.

class Utils {
    static fn identity(x: int32) -> int32 {
        return x;
    }
}

fn type_method_call_arg_type() -> void {
    y: int32 = Utils.identity("bad");  //~ ERROR FS-SEM-0010 @31
}
